# opstr

./: Cargo.toml  README.adoc  README.md  TODO.md
.github/workflows/: build.yml  release.yml
data/emoji_data/: emoji-sequences-to-rust-data.py
src/: auxiliary.rs  config.rs  errors.rs  input.rs  lib.rs  main.rs  matcher.rs  output.rs  range.rs  repr.rs
src/ops/: base64_decode.rs  base64_encode.rs  base64_url_safe_decode.rs  base64_url_safe_encode.rs  camelcase.rs  camelcase_for_ascii.rs  center.rs  codepoint_frequencies.rs  codepoint_frequency.rs  codepoint_lookup.rs  codepoint_names.rs  codepoints.rs  codepoints_names.rs  codepoints_unotation.rs  codepoints_ustring_list.rs  combining_codepoint_list.rs  concatenate.rs  count_codepoints.rs  count_grapheme_clusters.rs  count_substring.rs  count_utf16_bytes.rs  count_utf8_bytes.rs  dedent.rs  dedent_with_substring.rs  digest_md5.rs  digest_sha1.rs  digest_sha256.rs  digest_sha3.rs  emoji_by_name.rs  format.rs  grapheme_clusters.rs  guarantee_prefix.rs  guarantee_suffix.rs  human_readable_bytes.rs  indent_with_substring.rs  is_ascii.rs  is_caseinsensitively_equal.rs  is_contained.rs  is_crlf_lineterminated.rs  is_empty.rs  (+53 more)
src/ops/is_charset_id/: data.rs  is_charset_id.rs  mod.rs
