[package]
name = "opstr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
unicode-normalization = "0.1.22"
unicode-segmentation = "1.9.0"
base64 = "0.21.2"
hex = { version = "0.4.3", optional = true }
md5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.7", optional = true }
sha3 = { version = "0.10.8", optional = true }

# provides formatting capabilities at runtime
rt-format = "0.3.1"
termcolor = "1.4.1"

[features]
default = ["digest"]
digest = ["dep:md5", "dep:sha1", "dep:sha2", "dep:sha3", "dep:hex"]
