[package]
name = "opstr"
version = "1.1.0"
edition = "2021"
description = "‘Operate on strings’ command line utility"
license = "MIT"
repository = "https://github.com/typho/opstr"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
unicode-normalization = "0.1.22"
unicode-segmentation = "1.9.0"
base64 = "0.21.2"
hex = { version = "0.4.3", optional = true }
md5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.7", optional = true }
sha3 = { version = "0.10.8", optional = true }
regex = { version = "1.10.4", optional = true }
icu = { version = "1.4.0", optional = true, features = ["serde"] }
icu_collator = { version = "1.4.0", optional = true, features = ["serde"] }
icu_provider = { version = "1.4.0", optional = true, features = ["serde", "deserialize_postcard_1"] }
icu_provider_blob = { version = "1.4.0", optional = true }
icu_provider_adapters = { version = "1.4.0", optional = true, features = ["serde"] }

# provides formatting capabilities at runtime
rt-format = "0.3.1"
# provides colors on the terminal
termcolor = "1.4.1"

[features]
default = ["digest", "regex", "icu"]
digest = ["dep:md5", "dep:sha1", "dep:sha2", "dep:sha3", "dep:hex"]
regex = ["dep:regex"]
icu = ["dep:icu", "icu_provider", "dep:icu_provider_blob", "dep:icu_provider_adapters"]
